skims\feat(back): #2975 java pass encoders
Former-commit-id: fa94a9464182c69b71e7b2975507f48a9c41ee5c

--- a/skims/static/translations/findings/F052.yaml
+++ b/skims/static/translations/findings/F052.yaml
@@ -4,6 +4,9 @@ src.lib_path.f052.java_insecure_cipher.description:
 src.lib_path.f052.java_insecure_hash.description:
   en: Use of insecure hashing function in {path}
   es: Uso de función resumen insegura en {path}
+src.lib_path.f052.java_insecure_pass.description:
+  en: Use of insecure password encoder in {path}
+  es: Uso de codificador de contraseña inseguro en {path}
 utils.model.finding.enum.F052.description:
   en: >
     The application uses insecure encryption algorithms.
