--- a/skims/static/translations/findings/F052.yaml
+++ b/skims/static/translations/findings/F052.yaml
@@ -4,6 +4,9 @@ src.lib_path.f052.java_insecure_cipher.description:
 src.lib_path.f052.java_insecure_hash.description:
   en: Use of insecure hashing function in {path}
   es: Uso de función resumen insegura en {path}
+src.lib_path.f052.java_insecure_key.description:
+  en: Use of insecure parameters in {path}
+  es: Uso de parametros inseguros en {path}
 src.lib_path.f052.java_insecure_pass.description:
   en: Use of insecure password encoder in {path}
   es: Uso de codificador de contraseña inseguro en {path}
@@ -18,7 +21,7 @@ utils.model.finding.enum.F052.impact:
     - Tamper protected data by exploiting algorithm collisions.
   es: |
     - Reversar el texto cifrado para encontrar información sensible.
-    - Alterar datos protegidos al aprovechar colisiones del la función resumen.
+    - Alterar datos protegidos al aprovechar colisiones de la función resumen.
 utils.model.finding.enum.F052.recommendation:
   en: >
     Use algorithms considered cryptographically secure.
