--- a/content/pages/rules/authorization/034/index.adoc
+++ b/content/pages/rules/authorization/034/index.adoc
@@ -1,7 +1,7 @@
 :slug: rules/034/
 :category: authorization
 :description: This requirement establishes the importance of allowing the system to manage and disable the user accounts through privileged users or system administrators.
-:keywords: Requirement, Security, User, Accounts, Management, Administration, HIPAA, PCI DSS, Rules, Ethical Hacking, Pentesting
+:keywords: Requirement, Security, User, Accounts, Management, Administration, HIPAA, ISO, PCI DSS, Rules, Ethical Hacking, Pentesting
 :rules: yes
 
 = R034. Manage user accounts
@@ -19,6 +19,14 @@ Implement procedures for the authorization and/or supervision
 of workforce members who work with electronic protected health information
 or in locations where it might be accessed.
 
-. [[r2]] link:https://www.pcisecuritystandards.org/documents/PCI_DSS_v3-2-1.pdf[PCI DSS v3.2.1 - Requirement 8.1.2]
+. [[r2]] link:https://www.iso.org/obp/ui/#iso:std:54534:en[ISO 27001:2013. Annex A - 9.2.1]
+Implement a formal process for user registration and deletion in order to
+enable access rights assignation.
+
+. [[r3]] link:https://www.iso.org/obp/ui/#iso:std:54534:en[ISO 27001:2013. Annex A - 9.2.2]
+Implement a formal access granting process to assign or revoke access rights
+to all types of users to systems and services.
+
+. [[r4]] link:https://www.pcisecuritystandards.org/documents/PCI_DSS_v3-2-1.pdf[PCI DSS v3.2.1 - Requirement 8.1.2]
 Control addition, deletion, and modification of user IDs, credentials,
 and other identifier objects.
