--- a/content/pages/rules/networks/257/index.adoc
+++ b/content/pages/rules/networks/257/index.adoc
@@ -1,7 +1,7 @@
 :slug: rules/257/
 :category: networks
 :description: This requirement establishes the importance of defining an access model based on organizational user credentials.
-:keywords: Requirement, Security, Physical, Access, Network, Credentials, Rules, Ethical Hacking, Pentesting
+:keywords: Requirement, Security, Physical, Access, Network, Credentials, HIPAA, ISO, NIST, Rules, Ethical Hacking, Pentesting
 :rules: yes
 
 = R257. Access based on user credentials
@@ -14,13 +14,17 @@ must be assigned based on organizational user credentials
 
 == References
 
-. [[r1]] link:https://www.law.cornell.edu/cfr/text/45/164.312[+HIPAA Security Rules+ 164.312(e)(1):]
+. [[r1]] link:https://www.law.cornell.edu/cfr/text/45/164.312[HIPAA Security Rules 164.312(e)(1):]
 Transmission Security: Implement technical security measures
 to guard against unauthorized access
 to electronic protected health information
 that is being transmitted over an electronic communications network.
 
-. [[r2]] link:https://nvd.nist.gov/800-53/Rev4/control/IA-2[+NIST+ 800-53 IA-2]
+. [[r2]] link:https://www.iso.org/obp/ui/#iso:std:54534:en[ISO 27001:2013. Annex A - 9.1.2]
+Users should only have access to the internal network and network
+services for which they have been explicitly authorized.
+
+. [[r3]] link:https://nvd.nist.gov/800-53/Rev4/control/IA-2[NIST 800-53 IA-2]
 Identification and authentication:
 The information system uniquely identifies and authenticates
 organizational users (or processes acting on behalf of organizational users).
