--- a/skims/static/translations/findings/F052.yaml
+++ b/skims/static/translations/findings/F052.yaml
@@ -1,13 +1,13 @@
-src.lib_path.f052.java_insecure_cipher.description:
+src.lib_path.f052.insecure_cipher.description:
   en: Use of insecure encryption algorithm in {path}
   es: Uso de algoritmo de cifrado inseguro en {path}
-src.lib_path.f052.java_insecure_hash.description:
+src.lib_path.f052.insecure_hash.description:
   en: Use of insecure hashing function in {path}
   es: Uso de función resumen insegura en {path}
-src.lib_path.f052.java_insecure_key.description:
+src.lib_path.f052.insecure_key.description:
   en: Use of insecure parameters in {path}
   es: Uso de parametros inseguros en {path}
-src.lib_path.f052.java_insecure_pass.description:
+src.lib_path.f052.insecure_pass.description:
   en: Use of insecure password encoder in {path}
   es: Uso de codificador de contraseña inseguro en {path}
 utils.model.finding.enum.F052.description:
