--- a/content/pages/rules/files/041/index.adoc
+++ b/content/pages/rules/files/041/index.adoc
@@ -1,7 +1,7 @@
 :slug: rules/041/
 :category: files
 :description: This requirement establishes that the files transferred or uploaded to the system must be scanned for possible malicious code.
-:keywords: Validate, File, Code, ASVS, CWE, Malicious, PCI DSS, Rules, Ethical Hacking, Pentesting
+:keywords: Validate, File, Code, ASVS, CWE, Malicious, NERC, PCI DSS, Rules, Ethical Hacking, Pentesting
 :rules: yes
 
 = R041. Scan files for malicious code
@@ -28,17 +28,25 @@ interface for interaction with external actors,
 but the interface includes a dangerous method or function that is not properly
 restricted.
 
-. [[r3]] link:https://owasp.org/www-project-application-security-verification-standard/[OWASP-ASVS v4.0.1
+. [[r3]] link:https://www.nerc.com/pa/Stand/Reliability%20Standards/CIP-003-8.pdf[NERC CIP-003-8. Attachment 1. Section 5 - 5.1]
+Each Responsible Entity shall implement,
+except under CIP Exceptional Circumstances,
+one or more plan(s) to achieve the objective of mitigating the risk of the
+introduction of malicious code to low impact BES Cyber Systems.
+The plan(s) shall include antivirus software,
+or other method(s) to mitigate the introduction of malicious code.
+
+. [[r4]] link:https://owasp.org/www-project-application-security-verification-standard/[OWASP-ASVS v4.0.1
 V10.1 Code Integrity Controls.(10.1.1)]
 Verify that a code analysis tool is in use that can detect potentially
 malicious code, such as time functions, unsafe file operations and network
 connections.
 
-. [[r4]] link:https://owasp.org/www-project-application-security-verification-standard/[OWASP-ASVS v4.0.1
+. [[r5]] link:https://owasp.org/www-project-application-security-verification-standard/[OWASP-ASVS v4.0.1
 V12.4 File Storage Requirements.(12.4.2)]
 Verify that files obtained from untrusted sources are scanned by antivirus
 scanners to prevent upload of known malicious content.
 
-. [[r5]] link:https://www.pcisecuritystandards.org/documents/PCI_DSS_v3-2-1.pdf[PCI DSS v3.2.1 - Requirement 5.1.1]
+. [[r6]] link:https://www.pcisecuritystandards.org/documents/PCI_DSS_v3-2-1.pdf[PCI DSS v3.2.1 - Requirement 5.1.1]
 Ensure that anti-virus programs are capable of detecting, removing, and
 protecting against all known types of malicious software.
