--- a/content/pages/rules/networks/255/index.adoc
+++ b/content/pages/rules/networks/255/index.adoc
@@ -1,7 +1,7 @@
 :slug: rules/255/
 :category: networks
 :description: This requirement establishes the importance of allowing access only to the necessary ports to avoid security breaches.
-:keywords: Requirement, Security, Ports, Access, Restricted, Servers, HIPAA, PCI DSS, Rules, Ethical Hacking, Pentesting
+:keywords: Requirement, Security, Ports, Access, Restricted, Servers, HIPAA, NERC, PCI DSS, Rules, Ethical Hacking, Pentesting
 :rules: yes
 
 = R255. Allow access only to the necessary ports
@@ -17,22 +17,27 @@ must allow access only to the necessary ports.
 
 == References
 
-. [[r1]] link:https://www.law.cornell.edu/cfr/text/45/164.312[+HIPAA Security Rules+ 164.312(e)(1):]
+. [[r1]] link:https://www.law.cornell.edu/cfr/text/45/164.312[HIPAA Security Rules 164.312(e)(1):]
 Transmission Security: Implement technical security measures
 to guard against unauthorized access
 to electronic protected health information
 that is being transmitted over an electronic communications network.
 
-. [[r2]] link:https://www.pcisecuritystandards.org/documents/PCI_DSS_v3-2-1.pdf[PCI DSS v3.2.1 - Requirement 1.3.1]
+. [[r2]] link:https://www.nerc.com/pa/Stand/Reliability%20Standards/CIP-007-6.pdf[NERC CIP-007-6. B. Requirements and measures. R1.1]
+Where technically feasible, enable only logical network accessible ports that
+have been determined to be needed by the Responsible Entity,
+including port ranges or services where needed to handle dynamic ports.
+
+. [[r3]] link:https://www.pcisecuritystandards.org/documents/PCI_DSS_v3-2-1.pdf[PCI DSS v3.2.1 - Requirement 1.3.1]
 Implement a *DMZ* to limit inbound traffic to only system components that
 provide authorized publicly accessible services, protocols, and ports.
 
-. [[r3]] link:https://www.pcisecuritystandards.org/documents/PCI_DSS_v3-2-1.pdf[PCI DSS v3.2.1 - Requirement 1.3.2]
+. [[r4]] link:https://www.pcisecuritystandards.org/documents/PCI_DSS_v3-2-1.pdf[PCI DSS v3.2.1 - Requirement 1.3.2]
 Limit inbound Internet traffic to *IP* addresses within the *DMZ*.
 
-. [[r4]] link:https://www.pcisecuritystandards.org/documents/PCI_DSS_v3-2-1.pdf[PCI DSS v3.2.1 - Requirement 1.3.5]
+. [[r5]] link:https://www.pcisecuritystandards.org/documents/PCI_DSS_v3-2-1.pdf[PCI DSS v3.2.1 - Requirement 1.3.5]
 Permit only "established" connections into the network.
 
-. [[r5]] link:https://www.pcisecuritystandards.org/documents/PCI_DSS_v3-2-1.pdf[PCI DSS v3.2.1 - Requirement 2.2.2]
+. [[r6]] link:https://www.pcisecuritystandards.org/documents/PCI_DSS_v3-2-1.pdf[PCI DSS v3.2.1 - Requirement 2.2.2]
 Enable only necessary services, protocols, daemons, etc.,
 as required for the function of the system.
