--- a/content/pages/rules/source/155/index.adoc
+++ b/content/pages/rules/source/155/index.adoc
@@ -1,7 +1,7 @@
 :slug: rules/155/
 :category: source
 :description: This requirement establishes the importance of having an application free of malicious code mainly developed by third parties.
-:keywords: Source Code, Functional Requirements, ASVS, CWE, ISO, Different, Backdoors, Rules, Ethical Hacking, Pentesting
+:keywords: Source Code, Functional Requirements, ASVS, CWE, ISO, NERC, Different, Backdoors, Rules, Ethical Hacking, Pentesting
 :rules: yes
 
 = R155. Application free of malicious code
@@ -41,19 +41,22 @@ or when a certain logical condition is met.
 Establish detection, prevention and recovery mechanisms to protect against
 malicious code.
 
-. [[r5]] link:https://owasp.org/www-project-application-security-verification-standard/[OWASP-ASVS v4.0.1
+. [[r5]] link:https://www.nerc.com/pa/Stand/Reliability%20Standards/CIP-007-6.pdf[NERC CIP-007-6. B. Requirements and measures. R3.1]
+Deploy method(s) to deter, detect, or prevent malicious code.
+
+. [[r6]] link:https://owasp.org/www-project-application-security-verification-standard/[OWASP-ASVS v4.0.1
 Appendix C: Internet of Things Verification Requirements.(C.13)]
 Verify all code including third-party binaries, libraries, frameworks are
 reviewed for hardcoded credentials (*backdoors*).
 
-. [[r6]] link:https://owasp.org/www-project-application-security-verification-standard/[OWASP-ASVS v4.0.1
+. [[r7]] link:https://owasp.org/www-project-application-security-verification-standard/[OWASP-ASVS v4.0.1
 V10.2 Malicious Code Search.(10.2.1)]
 Verify that the application source code and third party libraries do not
 contain unauthorized phone home or data collection capabilities.
 Where such functionality exists, obtain the user's permission for it to operate
 before collecting any data.
 
-. [[r7]] link:https://owasp.org/www-project-application-security-verification-standard/[OWASP-ASVS v4.0.1
+. [[r8]] link:https://owasp.org/www-project-application-security-verification-standard/[OWASP-ASVS v4.0.1
 V10.2 Malicious Code Search.(10.2.3)]
 Verify that the application source code and third party libraries do not contain
 backdoors,
@@ -63,17 +66,17 @@ or anti-debugging, insecure debugging features,
 or otherwise out of date, insecure, or hidden functionality that could be used
 maliciously if discovered.
 
-. [[r8]] link:https://owasp.org/www-project-application-security-verification-standard/[OWASP-ASVS v4.0.1
+. [[r9]] link:https://owasp.org/www-project-application-security-verification-standard/[OWASP-ASVS v4.0.1
 V10.2 Malicious Code Search.(10.2.4)]
 Verify that the application source code and third party libraries do not
 contain time bombs by searching for date and time related functions.
 
-. [[r9]] link:https://owasp.org/www-project-application-security-verification-standard/[OWASP-ASVS v4.0.1
+. [[r10]] link:https://owasp.org/www-project-application-security-verification-standard/[OWASP-ASVS v4.0.1
 V10.2 Malicious Code Search.(10.2.5)]
 Verify that the application source code and third party libraries do not
 contain malicious code, such as salami attacks, logic bypasses, or logic bombs.
 
-. [[r10]] link:https://owasp.org/www-project-application-security-verification-standard/[OWASP-ASVS v4.0.1
+. [[r11]] link:https://owasp.org/www-project-application-security-verification-standard/[OWASP-ASVS v4.0.1
 V10.2 Malicious Code Search.(10.2.6)]
 Verify that the application source code and third party libraries do not
 contain Easter eggs or any other potentially unwanted functionality.
