feat(doc): #3657.5 add nerc refs to some rules
- Added NERC references to R142, R132, R133, R130 and R237
- Updated R142, R132, R133, R130 and R237 keywords


Former-commit-id: 7fef5ad12a1fcc989e22c4d71d7f71baba490403

--- a/content/pages/rules/credentials/130/index.adoc
+++ b/content/pages/rules/credentials/130/index.adoc
@@ -1,7 +1,7 @@
 :slug: rules/130/
 :category: credentials
 :description: This requirement establishes that the system must not allow its passwords to have a lifespan of more than 30 days.
-:keywords: Password, Validity, Security, Expiration, Limit, CWE, PCI DSS, Rules, Ethical Hacking, Pentesting
+:keywords: Password, Validity, Security, Expiration, Limit, CWE, NERC, PCI DSS, Rules, Ethical Hacking, Pentesting
 :rules: yes
 
 = R130. Limit password lifespan
@@ -20,5 +20,11 @@ Passwords must be valid for a maximum of *30* days.
 Allowing password aging to occur unchecked can result in the possibility of
 diminished password integrity.
 
-. [[r2]] link:https://www.pcisecuritystandards.org/documents/PCI_DSS_v3-2-1.pdf[PCI DSS v3.2.1 - Requirement 8.2.4]
+. [[r2]] link:https://www.nerc.com/pa/Stand/Reliability%20Standards/CIP-007-6.pdf[NERC CIP-007-6. B. Requirements and measures. R5.6]
+Where technically feasible,
+for password-only authentication for interactive user access,
+either technically or procedurally enforce password changes or an obligation to
+change the password at least once every 15 calendar months.
+
+. [[r3]] link:https://www.pcisecuritystandards.org/documents/PCI_DSS_v3-2-1.pdf[PCI DSS v3.2.1 - Requirement 8.2.4]
 Change user passwords/passphrases at least once every 90 days.
