--- a/content/pages/rules/authentication/237/index.adoc
+++ b/content/pages/rules/authentication/237/index.adoc
@@ -1,7 +1,7 @@
 :slug: rules/237/
 :category: authentication
 :description: This requirement states that the system must guarantee that all user actions are executed by a human and not by robots performing automated tasks.
-:keywords: Robot, Human Interaction, User, Limit, ASVS, CWE, OWASP, PCI DSS, Rules, Ethical Hacking, Pentesting
+:keywords: Robot, Human Interaction, User, Limit, ASVS, CWE, NERC, OWASP, PCI DSS, Rules, Ethical Hacking, Pentesting
 :rules: yes
 
 = R237. Ascertain human interaction
@@ -53,20 +53,25 @@ The software uses a CAPTCHA challenge,
 but the challenge can be guessed or automatically recognized by a non-human
 actor.
 
-. [[r5]] link:https://owasp.org/www-project-top-ten/OWASP_Top_Ten_2017/Top_10-2017_A2-Broken_Authentication[OWASP Top 10 A2:2017-Broken Authentication].
+. [[r5]] link:https://www.nerc.com/pa/Stand/Reliability%20Standards/CIP-007-6.pdf[NERC CIP-007-6. B. Requirements and measures. R5.7]
+Where technically feasible,
+either limit the number of unsuccessful authentication attempts;
+or generate alerts after a threshold of unsuccessful authentication attempts.
+
+. [[r6]] link:https://owasp.org/www-project-top-ten/OWASP_Top_Ten_2017/Top_10-2017_A2-Broken_Authentication[OWASP Top 10 A2:2017-Broken Authentication].
 Application functions related to authentication and session management are
 often implemented incorrectly,
 allowing attackers to compromise passwords, keys, or session tokens,
 or to exploit other implementation flaws to assume other users' identities
 temporarily or permanently.
 
-. [[r6]] link:https://owasp.org/www-project-application-security-verification-standard/[OWASP-ASVS v4.0.1
+. [[r7]] link:https://owasp.org/www-project-application-security-verification-standard/[OWASP-ASVS v4.0.1
 V1.2 Authentication Architectural Requirements.(1.2.4)]
 Verify that all authentication pathways and identity management APIs implement
 consistent authentication security control strength,
 such that there are no weaker alternatives per the risk of the application.
 
-. [[r7]] link:https://owasp.org/www-project-application-security-verification-standard/[OWASP-ASVS v4.0.1
+. [[r8]] link:https://owasp.org/www-project-application-security-verification-standard/[OWASP-ASVS v4.0.1
 V2.2 General Authenticator Requirements.(2.2.1)]
 Verify that anti-automation controls are effective at mitigating breached
 credential testing, brute force, and account lockout attacks.
@@ -78,28 +83,28 @@ recent attempts to unlock the account, or similar.
 Verify that no more than 100 failed attempts per hour is possible on a single
 account.
 
-. [[r8]] link:https://owasp.org/www-project-application-security-verification-standard/[OWASP-ASVS v4.0.1
+. [[r9]] link:https://owasp.org/www-project-application-security-verification-standard/[OWASP-ASVS v4.0.1
 V8.1 General Data Protection.(8.1.4)]
 Verify the application can detect and alert on abnormal numbers of requests,
 such as by IP, user, total per hour or day, or whatever makes sense for the
 application.
 
-. [[r9]] link:https://owasp.org/www-project-application-security-verification-standard/[OWASP-ASVS v4.0.1
+. [[r10]] link:https://owasp.org/www-project-application-security-verification-standard/[OWASP-ASVS v4.0.1
 V11.1 Business Logic Security Requirements.(11.1.2)]
 Verify the application will only process business logic flows with all steps
 being processed in realistic human time,
 i.e. transactions are not submitted too quickly.
 
-. [[r10]] link:https://owasp.org/www-project-application-security-verification-standard/[OWASP-ASVS v4.0.1
+. [[r11]] link:https://owasp.org/www-project-application-security-verification-standard/[OWASP-ASVS v4.0.1
 V11.1 Business Logic Security Requirements.(11.1.8)]
 Verify the application has configurable alerting when automated attacks or
 unusual activity is detected.
 
-. [[r11]] link:https://owasp.org/www-project-application-security-verification-standard/[OWASP-ASVS v4.0.1
+. [[r12]] link:https://owasp.org/www-project-application-security-verification-standard/[OWASP-ASVS v4.0.1
 V13.2 RESTful Web Service Verification Requirements.(13.2.4)]
 Verify that *REST* services have anti-automation controls to protect against
 excessive calls, especially if the API is unauthenticated.
 
-. [[r12]] link:https://www.pcisecuritystandards.org/documents/PCI_DSS_v3-2-1.pdf[PCI DSS v3.2.1 - Requirement 6.5.10]
+. [[r13]] link:https://www.pcisecuritystandards.org/documents/PCI_DSS_v3-2-1.pdf[PCI DSS v3.2.1 - Requirement 6.5.10]
 Address common coding vulnerabilities in software-development processes such as
 broken authentication and session management.
