--- a/content/pages/rules/credentials/133/index.adoc
+++ b/content/pages/rules/credentials/133/index.adoc
@@ -1,7 +1,7 @@
 :slug: rules/133/
 :category: credentials
 :description: This requirement establishes the importance of defining secure passwords with a length of at least 20 characters.
-:keywords: Credentials, Access, Password, Length, CWE, ASVS, PCI DSS, Rules, Ethical Hacking, Pentesting
+:keywords: Credentials, Access, Password, Length, CWE, ASVS, NERC, PCI DSS, Rules, Ethical Hacking, Pentesting
 :rules: yes
 
 = R133. Passwords with at least 20 characters
@@ -22,10 +22,20 @@ System passwords must be at least *20* characters long.
 The product does not require that users should have strong passwords,
 which makes it easier for attackers to compromise user accounts.
 
-. [[r2]] link:https://owasp.org/www-project-application-security-verification-standard/[OWASP-ASVS v4.0.1
+. [[r2]] link:https://www.nerc.com/pa/Stand/Reliability%20Standards/CIP-007-6.pdf[NERC CIP-007-6. B. Requirements and measures. R5.5]
+For password-only authentication for interactive user access,
+either technically or procedurally enforce the following password parameters:
+Password length that is, at least,  the lesser of eight characters or the
+maximum length supported by the Cyber Asset;
+and minimum password complexity that is the lesser of three or more different
+types of characters
+(e.g., uppercase alphabetic, lowercase alphabetic, numeric, non-alphanumeric)
+or the maximum complexity supported by the Cyber Asset.
+
+. [[r3]] link:https://owasp.org/www-project-application-security-verification-standard/[OWASP-ASVS v4.0.1
 V2.1 Password Security Requirements.(2.1.1)]
 Verify that user set passwords are at least 12 characters in length.
 
-. [[r3]] link:https://www.pcisecuritystandards.org/documents/PCI_DSS_v3-2-1.pdf[PCI DSS v3.2.1 - Requirement 8.2.3]
+. [[r4]] link:https://www.pcisecuritystandards.org/documents/PCI_DSS_v3-2-1.pdf[PCI DSS v3.2.1 - Requirement 8.2.3]
 Passwords/passphrases must require a minimum length of at least seven
 characters or equivalent complexity and strength.
