--- a/content/pages/rules/credentials/142/index.adoc
+++ b/content/pages/rules/credentials/142/index.adoc
@@ -1,7 +1,7 @@
 :slug: rules/142/
 :category: credentials
 :description: This requirement establishes the importance of modifying all default credentials in the system in order to avoid brute force attacks.
-:keywords: Change, Credentials, Default, Password, System, ASVS, OWASP, PCI DSS, Rules, Ethical Hacking, Pentesting
+:keywords: Change, Credentials, Default, Password, System, ASVS, NERC, OWASP, PCI DSS, Rules, Ethical Hacking, Pentesting
 :rules: yes
 
 = R142. Change system default credentials
@@ -66,37 +66,40 @@ to detect improper configurations or missing patches.
 An adversary may try certain common or default usernames and passwords to gain
 access into the system and perform unauthorized actions.
 
-. [[r2]] link:https://owasp.org/www-project-top-ten/OWASP_Top_Ten_2017/Top_10-2017_A2-Broken_Authentication[OWASP Top 10 A2:2017-Broken Authentication].
+. [[r2]] link:https://www.nerc.com/pa/Stand/Reliability%20Standards/CIP-007-6.pdf[NERC CIP-007-6. B. Requirements and measures. R5.4]
+Change known default passwords, per Cyber Asset capability.
+
+. [[r3]] link:https://owasp.org/www-project-top-ten/OWASP_Top_Ten_2017/Top_10-2017_A2-Broken_Authentication[OWASP Top 10 A2:2017-Broken Authentication].
 Application functions related to authentication and session management are
 often implemented incorrectly,
 allowing attackers to compromise passwords, keys, or session tokens,
 or to exploit other implementation flaws to assume other users' identities
 temporarily or permanently.
 
-. [[r3]] link:https://owasp.org/www-project-application-security-verification-standard/[OWASP-ASVS v4.0.1
+. [[r4]] link:https://owasp.org/www-project-application-security-verification-standard/[OWASP-ASVS v4.0.1
 V2.5 Credential Recovery Requirements.(2.5.4)]
 Verify shared or default accounts are not present
 (e.g. "root", "admin", or "sa").
 
-. [[r4]] link:https://owasp.org/www-project-application-security-verification-standard/[OWASP-ASVS v4.0.1
+. [[r5]] link:https://owasp.org/www-project-application-security-verification-standard/[OWASP-ASVS v4.0.1
 V2.10 Service Authentication Requirements.(2.10.2)]
 Verify that if passwords are required,
 the credentials are not a default account.
 
-. [[r5]] link:https://owasp.org/www-project-application-security-verification-standard/[OWASP-ASVS v4.0.1
+. [[r6]] link:https://owasp.org/www-project-application-security-verification-standard/[OWASP-ASVS v4.0.1
 V14.2 Dependency.(14.2.2)]
 Verify that all unneeded features, documentation, samples, configurations are
 removed,
 such as sample applications, platform documentation, and default or example
 users.
 
-. [[r6]] link:https://www.pcisecuritystandards.org/documents/PCI_DSS_v3-2-1.pdf[PCI DSS v3.2.1 - Requirement 2.1.1]
+. [[r7]] link:https://www.pcisecuritystandards.org/documents/PCI_DSS_v3-2-1.pdf[PCI DSS v3.2.1 - Requirement 2.1.1]
 For wireless environments connected to the cardholder data environment or
 transmitting cardholder data,
 change ALL wireless vendor defaults at installation,
 including but not limited to default wireless encryption keys, passwords,
 and *SNMP* community strings.
 
-. [[r7]] link:https://www.pcisecuritystandards.org/documents/PCI_DSS_v3-2-1.pdf[PCI DSS v3.2.1 - Requirement 6.5.10]
+. [[r8]] link:https://www.pcisecuritystandards.org/documents/PCI_DSS_v3-2-1.pdf[PCI DSS v3.2.1 - Requirement 6.5.10]
 Address common coding vulnerabilities in software-development processes such as
 broken authentication and session management.
