feat(doc): #3657.6 add nerc refs to some rules
- Added NERC references to R185, R181 and R183
- Updated R185 and R183 keywords


Former-commit-id: afd64fc6c38a743bd85f08d247f26bdf4745bc58

--- a/content/pages/rules/data/183/index.adoc
+++ b/content/pages/rules/data/183/index.adoc
@@ -1,7 +1,7 @@
 :slug: rules/183/
 :category: data
 :description: This requirement establishes the importance of securely removing sensitive data when it is no longer required in order to avoid information leakages.
-:keywords: Sensitive, Data, Removal, Information, ASVS, GDPR, CWE, PCI DSS, Ethical Hacking, Pentesting
+:keywords: Sensitive, Data, Removal, Information, ASVS, GDPR, CWE, NERC, PCI DSS, Ethical Hacking, Pentesting
 :rules: yes
 
 = R183. Delete sensitive data securely
@@ -54,7 +54,13 @@ Personal data shall be kept in a form which permits identification of data
 subjects for no longer than is necessary for the purposes for which the
 personal data are processed.
 
-. [[r6]] link:https://owasp.org/www-project-top-ten/OWASP_Top_Ten_2017/Top_10-2017_A3-Sensitive_Data_Exposure[OWASP Top 10 A3:2017-Sensitive Data Exposure].
+. [[r6]] link:https://www.nerc.com/pa/Stand/Reliability%20Standards/CIP-011-2.pdf[NERC CIP-011-2. B. Requirements and measures. R2.1]
+Prior to the release for reuse of applicable Cyber Assets that contain BES
+Cyber System Information,
+the Responsible Entity shall take action to prevent the unauthorized retrieval
+of BES Cyber System Information from the Cyber Assetdata storage media.
+
+. [[r7]] link:https://owasp.org/www-project-top-ten/OWASP_Top_Ten_2017/Top_10-2017_A3-Sensitive_Data_Exposure[OWASP Top 10 A3:2017-Sensitive Data Exposure].
 Many web applications and **API**s do not properly protect sensitive data,
 such as financial, healthcare, and *PII*.
 Attackers may steal or modify such weakly protected data to conduct credit card
@@ -63,46 +69,46 @@ Sensitive data may be compromised without extra protection,
 such as encryption at rest or in transit, and requires special precautions when
 exchanged with the browser.
 
-. [[r7]] link:https://owasp.org/www-project-application-security-verification-standard/[OWASP-ASVS v4.0.1
+. [[r8]] link:https://owasp.org/www-project-application-security-verification-standard/[OWASP-ASVS v4.0.1
 Appendix C: Internet of Things Verification Requirements.(C.25)]
 Verify that the device wipes firmware and sensitive data upon detection of
 tampering or receipt of invalid message.
 
-. [[r8]] link:https://owasp.org/www-project-application-security-verification-standard/[OWASP-ASVS v4.0.1
+. [[r9]] link:https://owasp.org/www-project-application-security-verification-standard/[OWASP-ASVS v4.0.1
 Appendix C: Internet of Things Verification Requirements.(C.31)]
 Verify that sensitive information maintained in memory is overwritten with
 zeros as soon as it is no longer required.
 
-. [[r9]] link:https://owasp.org/www-project-application-security-verification-standard/[OWASP-ASVS v4.0.1
+. [[r10]] link:https://owasp.org/www-project-application-security-verification-standard/[OWASP-ASVS v4.0.1
 V8.1 General Data Protection.(8.1.2)]
 Verify that all cached or temporary copies of sensitive data stored on the
 server are protected from unauthorized access or purged/invalidated after the
 authorized user accesses the sensitive data.
 
-. [[r10]] link:https://owasp.org/www-project-application-security-verification-standard/[OWASP-ASVS v4.0.1
+. [[r11]] link:https://owasp.org/www-project-application-security-verification-standard/[OWASP-ASVS v4.0.1
 V8.2 Client-side Data Protection.(8.2.3)]
 Verify that authenticated data is cleared from client storage,
 such as the browser *DOM*, after the client or session is terminated.
 
-. [[r11]] link:https://owasp.org/www-project-application-security-verification-standard/[OWASP-ASVS v4.0.1
+. [[r12]] link:https://owasp.org/www-project-application-security-verification-standard/[OWASP-ASVS v4.0.1
 V8.3 Sensitive Private Data.(8.3.6)]
 Verify that sensitive information contained in memory is overwritten as soon as
 it is no longer required to mitigate memory dumping attacks,
 using zeros or random data.
 
-. [[r12]] link:https://owasp.org/www-project-application-security-verification-standard/[OWASP-ASVS v4.0.1
+. [[r13]] link:https://owasp.org/www-project-application-security-verification-standard/[OWASP-ASVS v4.0.1
 V8.3 Sensitive Private Data.(8.3.8)]
 Verify that sensitive personal information is subject to data retention
 classification,
 such that old or out of date data is deleted automatically, on a schedule,
 or as the situation requires.
 
-. [[r13]] link:https://www.pcisecuritystandards.org/documents/PCI_DSS_v3-2-1.pdf[PCI DSS v3.2.1 - Requirement 3.1]
+. [[r14]] link:https://www.pcisecuritystandards.org/documents/PCI_DSS_v3-2-1.pdf[PCI DSS v3.2.1 - Requirement 3.1]
 Keep cardholder data storage to a minimum by implementing data retention and
 disposal policies, procedures and processes for secure deletion of data when no
 longer needed.
 
-. [[r14]] link:https://www.pcisecuritystandards.org/documents/PCI_DSS_v3-2-1.pdf[PCI DSS v3.2.1 - Requirement 9.8.2]
+. [[r15]] link:https://www.pcisecuritystandards.org/documents/PCI_DSS_v3-2-1.pdf[PCI DSS v3.2.1 - Requirement 9.8.2]
 Destroy media when it is no longer needed for business or legal reasons.
 Render cardholder data on electronic media unrecoverable so that cardholder
 data cannot be reconstructed.
